Push the second learning check in

--- a/lab-materials/01-llms/1.0-basic-llm-prompt.ipynb
+++ b/lab-materials/01-llms/1.0-basic-llm-prompt.ipynb
@@ -23,7 +23,17 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "kfp 2.9.0 requires requests-toolbelt<1,>=0.8.0, but you have requests-toolbelt 1.0.0 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "#!pip install -q langchain==0.1.9 openai==1.13.3\n",
     "# !pip install langchain-openai\n",
@@ -64,10 +74,14 @@
     "# INFERENCE_SERVER_URL = os.getenv('API_URL')\n",
     "# MODEL_NAME = \"mistral-7b-instruct\"\n",
     "# API_KEY= os.getenv('API_KEY')\n",
+    "INFERENCE_SERVER_URL = \"http://localhost:8080\"\n",
+    "MODEL_NAME = \"mistralai/Mistral-7B-Instruct-v0.3\"\n",
+    "API_KEY= \"alanliuxiang\"\n",
     "\n",
-    "INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
-    "MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
-    "API_KEY= \"alanliuxiang\"\n"
+    "\n",
+    "# INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
+    "# MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
+    "# API_KEY= \"alanliuxiang\"\n"
    ]
   },
   {
@@ -178,7 +192,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1756/595551351.py:1: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
+      "/tmp/ipykernel_1782/595551351.py:1: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
       "  conversation = LLMChain(llm=llm,\n"
      ]
     }
