--- a/lab-materials/01-llms/1.1-basic-llm-prompt-memory-granite3.ipynb
+++ b/lab-materials/01-llms/1.1-basic-llm-prompt-memory-granite3.ipynb
@@ -154,7 +154,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1788/2290902444.py:1: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
+      "/tmp/ipykernel_3005/2290902444.py:1: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
       "  memory=ConversationBufferMemory()\n"
      ]
     }
@@ -193,7 +193,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1788/3407751332.py:2: LangChainDeprecationWarning: The class `ConversationChain` was deprecated in LangChain 0.2.7 and will be removed in 1.0. Use :meth:`~RunnableWithMessageHistory: https://python.langchain.com/v0.2/api_reference/core/runnables/langchain_core.runnables.history.RunnableWithMessageHistory.html` instead.\n",
+      "/tmp/ipykernel_3005/3407751332.py:2: LangChainDeprecationWarning: The class `ConversationChain` was deprecated in LangChain 0.2.7 and will be removed in 1.0. Use :meth:`~RunnableWithMessageHistory: https://python.langchain.com/v0.2/api_reference/core/runnables/langchain_core.runnables.history.RunnableWithMessageHistory.html` instead.\n",
       "  conversation = ConversationChain(llm=llm,\n"
      ]
     }
@@ -243,7 +243,7 @@
       "\n",
       "<|start_of_role|>assistant<|end_of_role|>\n",
       "\u001b[0m\n",
-      "The S&P 500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. It's widely used as a benchmark for the U.S. stock market and is often referred to as the \"S&P\" or \"the Index\". The index is market-capitalization weighted, meaning that larger companies have a greater influence on the index's movement.\n",
+      "The S&P 500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. It's widely used as a benchmark for the U.S. stock market and is often referred to as the \"S&P.\" The index covers approximately 80% of all publicly traded U.S. equities and is weighted by market capitalization, meaning larger companies have a greater influence on the index's performance.\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
     }
@@ -276,7 +276,7 @@
       "<|end_of_text|>\n",
       "\n",
       "<|start_of_role|>user<|end_of_role|>Human: Describe what is the S&P500 in 100 words or less.\n",
-      "AI: The S&P 500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. It's widely used as a benchmark for the U.S. stock market and is often referred to as the \"S&P\" or \"the Index\". The index is market-capitalization weighted, meaning that larger companies have a greater influence on the index's movement.\n",
+      "AI: The S&P 500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. It's widely used as a benchmark for the U.S. stock market and is often referred to as the \"S&P.\" The index covers approximately 80% of all publicly traded U.S. equities and is weighted by market capitalization, meaning larger companies have a greater influence on the index's performance.\n",
       "Human: How many companies are included?\n",
       "<|end_of_text|>\n",
       "\n",
@@ -343,7 +343,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm sorry for the confusion, but as of now, we are in the year 2023. Therefore, I cannot provide the results of the S&P500 for the years 2024 and beyond, as these results do not exist yet. The S&P500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. Its historical data is available up to the present day."
+      "I'm sorry for the confusion, but as of now, we are in the year 2023. Therefore, I cannot provide the results of the S&P500 for the years 2024 and beyond, as these years have not yet occurred. The S&P500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. Its performance is determined by the market forces of supply and demand, and it can fluctuate daily based on various factors such as economic indicators, company earnings, and geopolitical events."
      ]
     }
    ],
@@ -364,7 +364,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I apologize, but I am unable to provide the results of the S&P500 for the years 2024 and beyond, as these results do not exist yet. The S&P500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. Its historical data is available up to the present day."
+      "I apologize, but I am unable to provide the results of the S&P500 for the years 2024 and beyond, as these years have not yet occurred. The S&P500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. Its performance is determined by the market forces of supply and demand, and it can fluctuate daily based on various factors such as economic indicators, company earnings, and geopolitical events."
      ]
     }
    ],
