--- a/lab-materials/01-llms/1.1-basic-llm-prompt-memory.ipynb
+++ b/lab-materials/01-llms/1.1-basic-llm-prompt-memory.ipynb
@@ -55,13 +55,14 @@
    },
    "outputs": [],
    "source": [
-    "# INFERENCE_SERVER_URL = os.getenv('API_URL')\n",
-    "# MODEL_NAME = \"mistral-7b-instruct\"\n",
-    "# API_KEY= os.getenv('API_KEY')\n",
+    "INFERENCE_SERVER_URL = \"http://localhost:8080\"\n",
+    "MODEL_NAME = \"mistralai/Mistral-7B-Instruct-v0.3\"\n",
+    "API_KEY= \"alanliuxiang\"\n",
     "\n",
-    "INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
-    "MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
-    "API_KEY= \"alanliuxiang\""
+    "\n",
+    "# INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
+    "# MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
+    "# API_KEY= \"alanliuxiang\""
    ]
   },
   {
@@ -147,7 +148,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1840/2290902444.py:1: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
+      "/tmp/ipykernel_5098/2290902444.py:1: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
       "  memory=ConversationBufferMemory()\n"
      ]
     }
@@ -186,7 +187,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1840/3407751332.py:2: LangChainDeprecationWarning: The class `ConversationChain` was deprecated in LangChain 0.2.7 and will be removed in 1.0. Use :meth:`~RunnableWithMessageHistory: https://python.langchain.com/v0.2/api_reference/core/runnables/langchain_core.runnables.history.RunnableWithMessageHistory.html` instead.\n",
+      "/tmp/ipykernel_5098/3407751332.py:2: LangChainDeprecationWarning: The class `ConversationChain` was deprecated in LangChain 0.2.7 and will be removed in 1.0. Use :meth:`~RunnableWithMessageHistory: https://python.langchain.com/v0.2/api_reference/core/runnables/langchain_core.runnables.history.RunnableWithMessageHistory.html` instead.\n",
       "  conversation = ConversationChain(llm=llm,\n"
      ]
     }
@@ -236,7 +237,7 @@
       "AI:\n",
       "[/INST]\n",
       "\u001b[0m\n",
-      "The S&P 500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. It is one of the most widely followed equity indices and is often used as a benchmark for the overall U.S. stock market. The index is market-capitalization weighted, meaning that larger companies have a greater influence on the index's performance.\n",
+      " The S&P 500, or Standard & Poor's 500, is a stock market index that measures the performance of 500 large companies listed on stock exchanges in the United States. It is widely regarded as a primary gauge of U.S. equities and is often used as a benchmark for various investment strategies. Companies included in the S&P 500 are selected based on market size, liquidity, and industry group representation. The index is weighted by market capitalization, meaning larger companies have a greater influence on its overall performance.\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
     }
@@ -270,12 +271,12 @@
       "\n",
       "Current conversation:\n",
       "Human: Describe what is the S&P500 in 100 words or less.\n",
-      "AI: The S&P 500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. It is one of the most widely followed equity indices and is often used as a benchmark for the overall U.S. stock market. The index is market-capitalization weighted, meaning that larger companies have a greater influence on the index's performance.\n",
+      "AI:  The S&P 500, or Standard & Poor's 500, is a stock market index that measures the performance of 500 large companies listed on stock exchanges in the United States. It is widely regarded as a primary gauge of U.S. equities and is often used as a benchmark for various investment strategies. Companies included in the S&P 500 are selected based on market size, liquidity, and industry group representation. The index is weighted by market capitalization, meaning larger companies have a greater influence on its overall performance.\n",
       "Human: How many companies are included?\n",
       "AI:\n",
       "[/INST]\n",
       "\u001b[0m\n",
-      "The S&P 500 includes 500 companies.\n",
+      " The S&P 500 includes 500 large companies listed on stock exchanges in the United States. These companies are selected based on market size, liquidity, and industry group representation, and the index is weighted by market capitalization.\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
     }
@@ -336,7 +337,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm sorry for the confusion, but as of now, we are in the year 2023. Therefore, I cannot provide the S&P500 results for the years 2024 and beyond, as they have not occurred yet. The S&P500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. Its historical data is available for past years, but future results are not predictable."
+      " I'm sorry for any confusion, but the S&P 500 results are not available for future years as they are based on historical data and have not occurred yet. The S&P 500 is an index that measures the stock performance of 500 large companies listed on stock exchanges in the United States. To get the S&P 500 results for a specific year, you can look up the historical data from reliable financial sources once that year has passed."
      ]
     }
    ],
@@ -357,7 +358,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I apologize, but I am unable to provide the S&P500 results for the years 2024 and beyond, as they have not occurred yet. The S&P500 is a stock market index that tracks the performance of 500 large companies listed on stock exchanges in the United States. Its historical data is available for past years, but future results are not predictable."
+      " I'm sorry for any confusion, but the S&P 500 results are not available for future years as they are based on historical data and have not occurred yet. The S&P 500 is an index that measures the stock performance of 500 large companies listed on stock exchanges in the United States. To get the S&P 500 results for a specific year, you can look up the historical data from reliable financial sources once that year has passed.\n",
+      "\n",
+      "For your request, since we are currently in 2023, the last 5 years of S&P 500 results would be:\n",
+      "1. 2023 (not yet complete)\n",
+      "2. 2022\n",
+      "3. 2021\n",
+      "4. 2020\n",
+      "5. 2019\n",
+      "\n",
+      "I hope this helps clarify!"
      ]
     }
    ],
