--- a/lab-materials/02-tools/2.1-tools-calling-granite3.ipynb
+++ b/lab-materials/02-tools/2.1-tools-calling-granite3.ipynb
@@ -51,7 +51,18 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "codeflare-sdk 0.23.1 requires pydantic<2, but you have pydantic 2.10.5 which is incompatible.\n",
+      "kfp 2.9.0 requires requests-toolbelt<1,>=0.8.0, but you have requests-toolbelt 1.0.0 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "# !pip install -q langchain openai\n",
     "# !pip install langchain-openai\n",
@@ -194,12 +205,17 @@
    },
    "outputs": [],
    "source": [
-    "# INFERENCE_SERVER_URL = os.getenv('API_URL_GRANITE')\n",
-    "# MODEL_NAME = \"granite-3-8b-instruct\"\n",
-    "# API_KEY= os.getenv('API_KEY')\n",
+    "# INFERENCE_SERVER_URL = \"http://localhost:8080\"\n",
+    "# MODEL_NAME = \"mistralai/Mistral-7B-Instruct-v0.3\"\n",
+    "# API_KEY= \"alanliuxiang\"\n",
+    "\n",
     "INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
     "MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
-    "API_KEY= \"alanliuxiang\""
+    "API_KEY= \"alanliuxiang\"\n",
+    "\n",
+    "# INFERENCE_SERVER_URL = \"http://localhost:8089\"\n",
+    "# MODEL_NAME = \"meta-llama/Llama-3.2-1B\"\n",
+    "# API_KEY= \"alanliuxiang\""
    ]
   },
   {
@@ -345,16 +361,23 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "duckduckgo_search - A wrapper around DuckDuckGo Search. Useful for when you need to answer questions about current events. Input should be a search query., args: {{'query': {{'description': 'search query to look up', 'title': 'Query', 'type': 'string'}}}}\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1960/3274098412.py:3: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
+      "/tmp/ipykernel_1615/1586331684.py:3: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
       "  conversation = LLMChain(llm=llm,\n"
      ]
     }
    ],
    "source": [
-    "#print(tools_description)\n",
+    "print(tools_description)\n",
     "\n",
     "conversation = LLMChain(llm=llm,\n",
     "                        prompt=PROMPT,\n",
@@ -433,7 +456,9 @@
       "      \"type\": \"string\"\n",
       "    }\n",
       "  }\n",
-      "}\n"
+      "}\n",
+      "### action: duckduckgo_search\n",
+      "### action_input: {'query': {'description': 'S&P500 last 5 years results', 'title': 'Query', 'type': 'string'}}\n"
      ]
     }
    ],
@@ -443,7 +468,10 @@
     "response_dict = json.loads(response)\n",
     "\n",
     "action = response_dict.get(\"action\")\n",
-    "action_input = response_dict.get(\"action_input\")"
+    "action_input = response_dict.get(\"action_input\")\n",
+    "\n",
+    "print(f\"### action: {action}\")\n",
+    "print(f\"### action_input: {action_input}\")"
    ]
   },
   {
