--- a/lab-materials/02-tools/2.1-tools-calling.ipynb
+++ b/lab-materials/02-tools/2.1-tools-calling.ipynb
@@ -187,13 +187,13 @@
    },
    "outputs": [],
    "source": [
-    "# INFERENCE_SERVER_URL = os.getenv('API_URL')\n",
-    "# MODEL_NAME = \"mistral-7b-instruct\"\n",
-    "# API_KEY= os.getenv('API_KEY')\n",
+    "INFERENCE_SERVER_URL = \"http://localhost:8080\"\n",
+    "MODEL_NAME = \"mistralai/Mistral-7B-Instruct-v0.3\"\n",
+    "API_KEY= \"alanliuxiang\"\n",
     "\n",
-    "INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
-    "MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
-    "API_KEY= \"alanliuxiang\""
+    "# INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
+    "# MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
+    "# API_KEY= \"alanliuxiang\""
    ]
   },
   {
