--- a/lab-materials/04-basic-agents/4.3-react-agents.ipynb
+++ b/lab-materials/04-basic-agents/4.3-react-agents.ipynb
@@ -15,7 +15,17 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "kfp 2.9.0 requires requests-toolbelt<1,>=0.8.0, but you have requests-toolbelt 1.0.0 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "# !pip install -q langchain-openai termcolor langchain_community duckduckgo_search wikipedia openapi-python-client==0.12.3 langgraph langchain_experimental yfinance\n",
     "!pip install -q langchain-openai termcolor langchain_community duckduckgo_search wikipedia openapi-python-client langgraph langchain_experimental openai --quiet"
@@ -88,7 +98,12 @@
     "\n",
     "INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
     "MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
-    "API_KEY= \"alanliuxiang\""
+    "API_KEY= \"alanliuxiang\"\n",
+    "\n",
+    "\n",
+    "# INFERENCE_SERVER_URL = \"https://api.feidaapi.com\"\n",
+    "# MODEL_NAME = \"gpt-4o\"\n",
+    "# API_KEY= \"sk-TsoMJYTiW1Ya1AatboGdUGXEdCOAWeCeIbvUCkNMonrCHoQ7\""
    ]
   },
   {
@@ -213,7 +228,8 @@
    "source": [
     "from langgraph.prebuilt import ToolNode\n",
     "\n",
-    "tools = [duckduckgo_search, python_repl]"
+    "tools = [duckduckgo_search, \n",
+    "         python_repl]"
    ]
   },
   {
@@ -296,7 +312,7 @@
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x7faa84135710>"
+       "<langgraph.graph.state.StateGraph at 0x7f8ce718e690>"
       ]
      },
      "execution_count": 11,
@@ -330,7 +346,7 @@
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x7faa84135710>"
+       "<langgraph.graph.state.StateGraph at 0x7f8ce718e690>"
       ]
      },
      "execution_count": 12,
@@ -430,9 +446,31 @@
       "================================\u001b[1m Human Message \u001b[0m=================================\n",
       "\n",
       "Search which are the top FSI in the S&P 500 in 2024.\n",
-      "I'm sorry for the confusion, but as of now, I can only provide information up to the present time. Therefore, I cannot provide the top FSI (Financial Services Institutions) in the S&P 500 for the year 2024. Please provide a search query for the current year or a different topic.==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  duckduckgo_search (call_hY0ucaRssOxe56av1HDqlT4R)\n",
+      " Call ID: call_hY0ucaRssOxe56av1HDqlT4R\n",
+      "  Args:\n",
+      "    query: top FSI in the S&P 500 in 2024\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: duckduckgo_search\n",
       "\n",
-      "I'm sorry for the confusion, but as of now, I can only provide information up to the present time. Therefore, I cannot provide the top FSI (Financial Services Institutions) in the S&P 500 for the year 2024. Please provide a search query for the current year or a different topic.\n"
+      "The two most interesting stocks among top-performing S&P 500 shares. Vistra also benefited from the boom in AI applications, as data center companies signed deals to procure nuclear energy. They ... Last year, it was the top performer on the S&P 500, returning 239% for the year. In fact, since 2020, it has had triple-digit returns every year except 2022, when it fell 50% during the bear market. As the top-performing S&P 500 sector, communication services surged in 2024, driven by heavyweights Meta and Google, which saw 70% and 37% returns, respectively. Digital advertising revenues, which make up the vast majority of each company's total revenues, fueled returns thanks to strong consumer spending. The S&P 500 index is up 25% year to date, and it's no surprise to see several of the biggest gainers in 2024 were companies benefiting from the growth in artificial intelligence (AI). Here are the ... Big Data firm Palantir was the best performing large-company U.S. stock of 2024, returning 340.5% on the year.\n",
+      "In 2024, some of the top-performing stocks in the S&P 500 include:\n",
+      "\n",
+      "1. **Palantir** - The best performing large-company U.S. stock with a return of 340.5% for the year.\n",
+      "2. **Meta (Facebook)** - Achieved a 70% return, driven by digital advertising revenues.\n",
+      "3. **Google (Alphabet)** - Saw a 37% return, also fueled by digital advertising revenues.\n",
+      "\n",
+      "The communication services sector was the top-performing sector, largely due to the strong performance of Meta and Google. Additionally, companies benefiting from the growth in artificial intelligence (AI) were among the biggest gainers.==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "In 2024, some of the top-performing stocks in the S&P 500 include:\n",
+      "\n",
+      "1. **Palantir** - The best performing large-company U.S. stock with a return of 340.5% for the year.\n",
+      "2. **Meta (Facebook)** - Achieved a 70% return, driven by digital advertising revenues.\n",
+      "3. **Google (Alphabet)** - Saw a 37% return, also fueled by digital advertising revenues.\n",
+      "\n",
+      "The communication services sector was the top-performing sector, largely due to the strong performance of Meta and Google. Additionally, companies benefiting from the growth in artificial intelligence (AI) were among the biggest gainers.\n"
      ]
     }
    ],
@@ -473,9 +511,35 @@
       "================================\u001b[1m Human Message \u001b[0m=================================\n",
       "\n",
       "Which market cap have the top FSI, search for the results in 2024\n",
-      "I apologize, but I can only provide information up to the present time. Therefore, I cannot provide the market cap of the top FSI in the S&P 500 for the year 2024. Please provide a search query for the current year or a different topic.==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  duckduckgo_search (call_fVAb541k4gAohCbgZBtpMqyx)\n",
+      " Call ID: call_fVAb541k4gAohCbgZBtpMqyx\n",
+      "  Args:\n",
+      "    query: Palantir market cap 2024\n",
+      "  duckduckgo_search (call_VTq37vKRkp9KQJcPkikSZR7F)\n",
+      " Call ID: call_VTq37vKRkp9KQJcPkikSZR7F\n",
+      "  Args:\n",
+      "    query: Meta market cap 2024\n",
+      "  duckduckgo_search (call_0z2z9a781Lfxr6aZUEBQIOMz)\n",
+      " Call ID: call_0z2z9a781Lfxr6aZUEBQIOMz\n",
+      "  Args:\n",
+      "    query: Google market cap 2024\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: duckduckgo_search\n",
       "\n",
-      "I apologize, but I can only provide information up to the present time. Therefore, I cannot provide the market cap of the top FSI in the S&P 500 for the year 2024. Please provide a search query for the current year or a different topic.\n"
+      "Market Cap Chart Since August 19, 2004, Alphabet's market cap has increased from $27.24B to $2.42T, an increase of 8,799.47%. That is a compound annual growth rate of 24.56%. Alphabet has a market cap or net worth of $2.42 trillion. The enterprise value is $2.36 trillion. ... Ex-Dividend Date : Dec 9, 2024: Share Statistics. Alphabet has 12.24 billion shares outstanding. The number of shares has decreased by -2.32% in one year. ... so Alphabet's price volatility has been similar to the market average. Beta (5Y) 0.98 ... Market Cap Chart Since January 27, 2020, Alphabet's market cap has increased from $982.88B to $2.46T, an increase of 150.30%. That is a compound annual growth rate of 20.15%. Alphabet reported its 2024 third-quarter earnings on Tuesday, October 29, with EPS of $2.12, $0.28 better than the analyst estimate of $1.84. ... Alphabet (Google) Market Cap History from 2014 to ... What is Alphabet(Google) Market Cap? Market cap is the total market value to buy the whole company. It is equal to the share price times the number of Shares Outstanding (EOP). Alphabet(Google)'s share price for the quarter that ended in Sep. 2024 was $167.19. Alphabet(Google)'s Shares Outstanding (EOP) for the quarter that ended in Sep. 2024 was 12,264 Mil.\n",
+      "As of 2024, the market capitalizations for the top FSI in the S&P 500 are as follows:\n",
+      "\n",
+      "1. **Palantir**: Approximately $174 billion.\n",
+      "2. **Meta (Facebook)**: Around $1.4 trillion.\n",
+      "3. **Google (Alphabet)**: About $2.42 trillion.==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "As of 2024, the market capitalizations for the top FSI in the S&P 500 are as follows:\n",
+      "\n",
+      "1. **Palantir**: Approximately $174 billion.\n",
+      "2. **Meta (Facebook)**: Around $1.4 trillion.\n",
+      "3. **Google (Alphabet)**: About $2.42 trillion.\n"
      ]
     }
    ],
@@ -515,9 +579,48 @@
       "================================\u001b[1m Human Message \u001b[0m=================================\n",
       "\n",
       "Calculate the average market cap of these FSI?\n",
-      "I'm sorry for the confusion, but I need the list of FSI (Financial Services Institutions) to calculate their average market cap. Please provide the list of FSI you want to calculate the average market cap for.==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  python_repl (call_JcmTxApfcv2G7lFgbdbUZIH9)\n",
+      " Call ID: call_JcmTxApfcv2G7lFgbdbUZIH9\n",
+      "  Args:\n",
+      "    code: palantir_market_cap = 174\n",
+      "meta_market_cap = 1400\n",
+      "google_market_cap = 2420\n",
       "\n",
-      "I'm sorry for the confusion, but I need the list of FSI (Financial Services Institutions) to calculate their average market cap. Please provide the list of FSI you want to calculate the average market cap for.\n"
+      "average_market_cap = (palantir_market_cap + meta_market_cap + google_market_cap) / 3\n",
+      "average_market_cap\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Python REPL can execute arbitrary code. Use with caution.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: python_repl\n",
+      "\n",
+      "Successfully executed:\n",
+      "\\`\\`\\`python\n",
+      "palantir_market_cap = 174\n",
+      "meta_market_cap = 1400\n",
+      "google_market_cap = 2420\n",
+      "\n",
+      "average_market_cap = (palantir_market_cap + meta_market_cap + google_market_cap) / 3\n",
+      "average_market_cap\n",
+      "\\`\\`\\`\n",
+      "Stdout: \n",
+      "\n",
+      "If you have completed all tasks, respond with FINAL ANSWER.\n",
+      "The average market cap of Palantir, Meta, and Google in 2024 is approximately $1,331.33 billion.==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "The average market cap of Palantir, Meta, and Google in 2024 is approximately $1,331.33 billion.\n"
      ]
     }
    ],
