--- a/lab-materials/07-agent-frameworks/7.1-tool-calling-langgraph-granite3.ipynb
+++ b/lab-materials/07-agent-frameworks/7.1-tool-calling-langgraph-granite3.ipynb
@@ -43,13 +43,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: Ignoring invalid distribution ~vidia-cusolver-cu12 (/opt/app-root/lib64/python3.11/site-packages)\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution ~vidia-cusolver-cu12 (/opt/app-root/lib64/python3.11/site-packages)\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution ~vidia-cusolver-cu12 (/opt/app-root/lib64/python3.11/site-packages)\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution ~vidia-cusolver-cu12 (/opt/app-root/lib64/python3.11/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "mistral-common 1.5.2 requires pillow<11.0.0,>=10.3.0, but you have pillow 11.1.0 which is incompatible.\u001b[0m\u001b[31m\n",
       "\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "kfp 2.9.0 requires requests-toolbelt<1,>=0.8.0, but you have requests-toolbelt 1.0.0 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0m"
      ]
     }
    ],
@@ -164,7 +165,7 @@
    "outputs": [],
    "source": [
     "# Weather App API URL\n",
-    "WEATHER_API_BASE_URL = \"http://weather-app.llm-deploy.svc.cluster.local:8000\""
+    "WEATHER_API_BASE_URL = \"http://weather-app.angent-workshop.svc.cluster.local:8000\""
    ]
   },
   {
@@ -364,7 +365,7 @@
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x7fb2a949dd10>"
+       "<langgraph.graph.state.StateGraph at 0x7fcd4e37ce90>"
       ]
      },
      "execution_count": 9,
@@ -490,10 +491,10 @@
      "output_type": "stream",
      "text": [
       "The current weather in dolomites is as follows:\n",
-      "Temperature: -2.700000047683716°C\n",
-      "Cloud Cover: 100.0%\n",
-      "Humidity: 98.0%\n",
-      "Wind Speed: 2.595996856689453 km/h\n",
+      "Temperature: -8.25°C\n",
+      "Cloud Cover: 0.0%\n",
+      "Humidity: 36.0%\n",
+      "Wind Speed: 5.804825305938721 km/h\n",
       "Tool used: search\n"
      ]
     }
@@ -534,11 +535,11 @@
       "\n",
       "The Dolomites and the Catalan Pyrenees are both popular hiking destinations, each with its own unique features.\n",
       "\n",
-      "The Dolomites, located in Italy, are known for their dramatic peaks and valleys, which were carved by glaciers during the last ice age. This results in a stunning landscape with jagged mountains and lush valleys. The Dolomites offer a wide range of hiking trails, from easy walks to challenging multi-day treks. The region is also known for its rich cultural heritage and delicious food.\n",
+      "The Dolomites, located in Italy, are known for their dramatic peaks and valleys, which were formed by glacial erosion. They offer a wide range of hiking trails, from easy walks to challenging multi-day treks. The area is also famous for its stunning sunrises and sunsets, which can paint the peaks in warm, golden hues.\n",
       "\n",
-      "The Catalan Pyrenees, located in Spain, offer a different kind of hiking experience. The Pyrenees are known for their high peaks and deep valleys, and they are home to a diverse range of flora and fauna. The Catalan Pyrenees offer a variety of hiking trails, from short day hikes to long-distance treks like the GR11, which stretches over 800 kilometers. The region is also known for its unique culture and cuisine.\n",
+      "The Catalan Pyrenees, on the other hand, are part of the larger Pyrenees mountain range that spans France, Spain, and Andorra. They offer a variety of landscapes, including dense forests, alpine meadows, and rugged peaks. The Catalan Pyrenees are also known for their rich biodiversity and cultural heritage.\n",
       "\n",
-      "In terms of which is \"better\" for hiking, it really depends on what you're looking for. If you prefer a more rugged, challenging terrain and a rich cultural experience, the Dolomites might be the better choice. If you're interested in a longer, more remote trek and a unique cultural experience, the Catalan Pyrenees might be more suitable.Analyzing the concept of analyze why dolomites is better than catalan pyrenees for hiking... The analysis is complete.. If you need further information, feel free to ask.\n",
+      "Without specific details about your preferences (e.g., difficulty level, scenery, cultural experiences), it's hard to definitively say which is \"better\" for hiking. Both offer unique experiences and challenges. I recommend researching more about each location based on your personal interests and needs.Analyzing the concept of analyze why dolomites is better than catalan pyrenees for hiking... The analysis is complete.. If you need further information, feel free to ask.\n",
       "Tool used: analyze\n"
      ]
     }
@@ -591,7 +592,7 @@
       "9. A headlamp or flashlight (in case you're out later than expected)\n",
       "10. Trekking poles (optional, but helpful for steep ascents and descents)\n",
       "\n",
-      "Always check the weather forecast before your hike and adjust your gear accordingly. It's also important to inform someone of your hiking plans and expected return time.content=\"To hike in the Dolomites, you should bring the following gear:\\n\\n1. Hiking boots with good grip and ankle support\\n2. Layered clothing (moisture-wicking base layers, insulating mid-layers, and waterproof outer layers)\\n3. A backpack to carry your gear\\n4. A hat and gloves for warmth\\n5. Sunglasses and sunscreen for protection from the sun\\n6. A map and compass or GPS device\\n7. A first-aid kit\\n8. Food and water (at least 2 liters)\\n9. A headlamp or flashlight (in case you're out later than expected)\\n10. Trekking poles (optional, but helpful for steep ascents and descents)\\n\\nAlways check the weather forecast before your hike and adjust your gear accordingly. It's also important to inform someone of your hiking plans and expected return time.\" additional_kwargs={} response_metadata={'finish_reason': 'stop', 'model_name': 'ibm-granite/granite-3.0-8b-instruct'} id='run-179a1cc7-9a27-4bd7-9f08-4a562bb03fb7-0'\n",
+      "Always check the weather forecast before your hike and adjust your gear accordingly. It's also important to inform someone of your hiking plans and expected return time.content=\"To hike in the Dolomites, you should bring the following gear:\\n\\n1. Hiking boots with good grip and ankle support\\n2. Layered clothing (moisture-wicking base layers, insulating mid-layers, and waterproof outer layers)\\n3. A backpack to carry your gear\\n4. A hat and gloves for warmth\\n5. Sunglasses and sunscreen for protection from the sun\\n6. A map and compass or GPS device\\n7. A first-aid kit\\n8. Food and water (at least 2 liters)\\n9. A headlamp or flashlight (in case you're out later than expected)\\n10. Trekking poles (optional, but helpful for steep ascents and descents)\\n\\nAlways check the weather forecast before your hike and adjust your gear accordingly. It's also important to inform someone of your hiking plans and expected return time.\" additional_kwargs={} response_metadata={'finish_reason': 'stop', 'model_name': 'ibm-granite/granite-3.0-8b-instruct'} id='run-932cb6f8-7f5b-4ac0-9ccd-09ee9278c46e-0'\n",
       "No tools were used.\n"
      ]
     }
@@ -631,7 +632,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Agentic AI refers to artificial intelligence systems that are designed to act autonomously and make decisions on their own, often in complex and dynamic environments. These systems are typically equipped with advanced algorithms and machine learning capabilities that allow them to learn from their experiences and adapt to new situations. Agentic AI is often used in applications such as autonomous vehicles, robotics, and decision support systems.content='Agentic AI refers to artificial intelligence systems that are designed to act autonomously and make decisions on their own, often in complex and dynamic environments. These systems are typically equipped with advanced algorithms and machine learning capabilities that allow them to learn from their experiences and adapt to new situations. Agentic AI is often used in applications such as autonomous vehicles, robotics, and decision support systems.' additional_kwargs={} response_metadata={'finish_reason': 'stop', 'model_name': 'ibm-granite/granite-3.0-8b-instruct'} id='run-2266a889-a7c4-4781-9d08-009877020280-0'\n",
+      "Agentic AI refers to artificial intelligence systems that are designed to act autonomously and make decisions on their own, rather than being controlled by humans. These systems are often used in situations where human intervention is not possible or practical, such as in self-driving cars or autonomous drones. The term \"agentic\" comes from the idea that these systems have a sense of agency, or the ability to act independently and make decisions based on their own internal processes.content='Agentic AI refers to artificial intelligence systems that are designed to act autonomously and make decisions on their own, rather than being controlled by humans. These systems are often used in situations where human intervention is not possible or practical, such as in self-driving cars or autonomous drones. The term \"agentic\" comes from the idea that these systems have a sense of agency, or the ability to act independently and make decisions based on their own internal processes.' additional_kwargs={} response_metadata={'finish_reason': 'stop', 'model_name': 'ibm-granite/granite-3.0-8b-instruct'} id='run-623b4f32-4a53-415b-9e43-c29f19849456-0'\n",
       "No tools were used.\n"
      ]
     }
