--- a/lab-materials/07-agent-frameworks/7.2-react-agents-langgraph-granite3.ipynb
+++ b/lab-materials/07-agent-frameworks/7.2-react-agents-langgraph-granite3.ipynb
@@ -91,12 +91,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: Ignoring invalid distribution ~vidia-cusolver-cu12 (/opt/app-root/lib64/python3.11/site-packages)\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution ~vidia-cusolver-cu12 (/opt/app-root/lib64/python3.11/site-packages)\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution ~vidia-cusolver-cu12 (/opt/app-root/lib64/python3.11/site-packages)\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution ~vidia-cusolver-cu12 (/opt/app-root/lib64/python3.11/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[33mWARNING: Ignoring invalid distribution ~vidia-cufft-cu12 (/opt/app-root/lib64/python3.11/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution ~vidia-cufft-cu12 (/opt/app-root/lib64/python3.11/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution ~vidia-cufft-cu12 (/opt/app-root/lib64/python3.11/site-packages)\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution ~vidia-cufft-cu12 (/opt/app-root/lib64/python3.11/site-packages)\u001b[0m\u001b[33m\n",
       "\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
      ]
     }
@@ -166,13 +166,13 @@
    },
    "outputs": [],
    "source": [
-    "INFERENCE_SERVER_URL = \"http://localhost:8080\"\n",
-    "MODEL_NAME = \"mistralai/Mistral-7B-Instruct-v0.3\"\n",
-    "API_KEY= \"alanliuxiang\"\n",
+    "# INFERENCE_SERVER_URL = \"http://localhost:8080\"\n",
+    "# MODEL_NAME = \"mistralai/Mistral-7B-Instruct-v0.3\"\n",
+    "# API_KEY= \"alanliuxiang\"\n",
     "\n",
-    "# INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
-    "# MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
-    "# API_KEY= \"alanliuxiang\""
+    "INFERENCE_SERVER_URL = \"http://localhost:8000\"\n",
+    "MODEL_NAME = \"ibm-granite/granite-3.0-8b-instruct\"\n",
+    "API_KEY= \"alanliuxiang\"\n"
    ]
   },
   {
@@ -409,7 +409,7 @@
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x7f62285cd7d0>"
+       "<langgraph.graph.state.StateGraph at 0x7f7ed4133250>"
       ]
      },
      "execution_count": 10,
@@ -445,7 +445,7 @@
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x7f62285cd7d0>"
+       "<langgraph.graph.state.StateGraph at 0x7f7ed4133250>"
       ]
      },
      "execution_count": 11,
@@ -651,21 +651,25 @@
       "What is the biggest mountain in the world?\n",
       "\n",
       "\n",
-      "\n",
+      "The biggest mountain in the world is Mount Everest, with a height of approximately 8,848.86 meters (29,031.7 feet) above sea level.\n",
       "\n",
       "==================================\u001b[1m Agent Message \u001b[0m==================================\n",
       "\n",
       "Obtain the area of the mountain\n",
       "\n",
       "\n",
+      "I'm sorry for the confusion, but mountains don't have an area in the same way that flat surfaces do. The term \"area\" is typically used to describe the size of a two-dimensional surface. Mountains are three-dimensional objects, and their size is usually described using terms like height, volume, or base circumference.\n",
       "\n",
+      "If you're interested in the base circumference of Mount Everest, it's approximately 26 kilometers (16 miles). However, this doesn't represent the \"area\" of the mountain.\n",
       "\n",
       "==================================\u001b[1m Agent Message \u001b[0m==================================\n",
       "\n",
       "Now calculate the distance between the nearest city of the mountain. Select the closest\n",
       "\n",
       "\n",
+      "The nearest city to Mount Everest is Lukla, Nepal. The distance between Lukla and the base of Mount Everest is approximately 5,000 meters (16,404 feet). However, this is a straight-line distance and doesn't account for the actual path that would be taken to travel between the two points.\n",
       "\n",
+      "If you're interested in the distance along a specific route, such as a road or hiking trail, that information would depend on the specific path chosen.\n",
       "\n"
      ]
     }
@@ -731,7 +735,14 @@
       "\n",
       "\n",
       "\n",
+      "1. The biggest mountain in the world is Mount Everest, with a height of approximately 8,848.86 meters (29,031.7 feet) above sea level.\n",
+      "2. Mountains don't have an area in the same way that flat surfaces do. The term \"area\" is typically used to describe the size of a two-dimensional surface. Mountains are three-dimensional objects, and their size is usually described using terms like height, volume, or base circumference.\n",
+      "3. The nearest city to Mount Everest is Lukla, Nepal. The distance between Lukla and the base of Mount Everest is approximately 5,000 meters (16,404 feet). However, this is a straight-line distance and doesn't account for the actual path that would be taken to travel between the two points.\n",
+      "4. Climbing Mount Everest is a challenging and dangerous endeavor that requires specialized equipment and extensive training. Flip flops are not suitable footwear for climbing a mountain, as they do not provide the necessary support, traction, or protection for your feet.\n",
       "\n",
+      "For climbing Mount Everest, it is recommended to wear sturdy, insulated mountaineering boots with good ankle support and a secure fit. These boots should be broken in before the climb to prevent blisters and discomfort. Additionally, it is important to wear warm, moisture-wicking clothing, as well as gloves, goggles, and a hat to protect against the cold and wind.\n",
+      "\n",
+      "It is also highly recommended to hire a professional guide or join a guided expedition, as climbing Mount Everest requires a high level of physical fitness, technical skills, and experience in high-altitude climbing.\n",
       "\n"
      ]
     }
