--- a/lab-materials/04-basic-agents/4.1-agent-routing.ipynb
+++ b/lab-materials/04-basic-agents/4.1-agent-routing.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "61f8bd4d-9e6d-40ba-aaec-2441da40683c",
    "metadata": {
     "tags": []
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1128d826-bb1c-474c-b803-4f8ee93bf5ea",
    "metadata": {
     "tags": []
@@ -376,7 +376,9 @@
     "    [duckduckgo_search],\n",
     "    system_message=\"You should provide accurate search.\",\n",
     ")\n",
-    "search_node = functools.partial(agent_node, agent=search_agent, name=\"Researcher\")\n",
+    "search_node = functools.partial(agent_node,\n",
+    "                                agent=search_agent,\n",
+    "                                name=\"Researcher\")\n",
     "\n",
     "# chart_generator\n",
     "chart_agent = create_agent(\n",
@@ -384,7 +386,9 @@
     "    [python_repl],\n",
     "    system_message=\"A Python shell. Use this to execute python commands. Input should be a valid python command. If you want to see the output of a value, you should print it out with `print(...)`.\",\n",
     ")\n",
-    "chart_node = functools.partial(agent_node, agent=chart_agent, name=\"chart_generator\")"
+    "chart_node = functools.partial(agent_node,\n",
+    "                               agent=chart_agent,\n",
+    "                               name=\"chart_generator\")"
    ]
   },
   {
@@ -406,7 +410,7 @@
     {
      "data": {
       "text/plain": [
-       "tools(tags=None, recurse=True, func_accepts_config=True, func_accepts={'writer': False, 'store': True}, tools_by_name={'duckduckgo_search': DuckDuckGoSearchRun(api_wrapper=DuckDuckGoSearchAPIWrapper(region='wt-wt', safesearch='moderate', time='y', max_results=5, backend='auto', source='text')), 'python_repl': StructuredTool(name='python_repl', description='Use this to execute python code. If you want to see the output of a value,\\n    you should print it out with `print(...)`. This is visible to the user.', args_schema=<class 'langchain_core.utils.pydantic.python_repl'>, func=<function python_repl at 0x7fcc24c153a0>)}, tool_to_state_args={'duckduckgo_search': {}, 'python_repl': {}}, tool_to_store_arg={'duckduckgo_search': None, 'python_repl': None}, handle_tool_errors=True, messages_key='messages')"
+       "tools(tags=None, recurse=True, explode_args=False, func_accepts_config=True, func_accepts={'writer': False, 'store': True, 'previous': False}, tools_by_name={'duckduckgo_search': DuckDuckGoSearchRun(api_wrapper=DuckDuckGoSearchAPIWrapper(region='wt-wt', safesearch='moderate', time='y', max_results=5, backend='auto', source='text')), 'python_repl': StructuredTool(name='python_repl', description='Use this to execute python code. If you want to see the output of a value,\\n    you should print it out with `print(...)`. This is visible to the user.', args_schema=<class 'langchain_core.utils.pydantic.python_repl'>, func=<function python_repl at 0x7fa1728dbba0>)}, tool_to_state_args={'duckduckgo_search': {}, 'python_repl': {}}, tool_to_store_arg={'duckduckgo_search': None, 'python_repl': None}, handle_tool_errors=True, messages_key='messages')"
       ]
      },
      "execution_count": 11,
@@ -417,7 +421,8 @@
    "source": [
     "from langgraph.prebuilt import ToolNode\n",
     "\n",
-    "tools = [duckduckgo_search, python_repl]\n",
+    "tools = [duckduckgo_search, \n",
+    "         python_repl]\n",
     "tool_node = ToolNode(tools)\n",
     "tool_node"
    ]
@@ -533,7 +538,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4270/1524890136.py:17: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/\n",
+      "/tmp/ipykernel_2496/1524890136.py:17: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/\n",
       "  result = AIMessage(**result.dict(exclude={\"type\", \"name\"}), name=name)\n"
      ]
     },
@@ -599,7 +604,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4270/1524890136.py:17: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/\n",
+      "/tmp/ipykernel_2496/1524890136.py:17: PydanticDeprecatedSince20: The `dict` method is deprecated; use `model_dump` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.10/migration/\n",
       "  result = AIMessage(**result.dict(exclude={\"type\", \"name\"}), name=name)\n"
      ]
     },
